# behavioral-intelligence-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  if we want to tackle this.docx  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: shared.py  streamlit_app.py
app/pages/: 1_review_generator.py  2_recommendations.py  3_evaluation.py  4_persona_explorer.py
data/embeddings/: chroma.sqlite3
data/processed/: formatted_wide.csv  formatted_wide_encoded.csv  formatted_wide_encoded.xlsx  persona_library_formatted_wide.xlsx  persona_libray_cleaned.csv
data/raw/: formatted.xlsx
docs/: architecture.md  deployment.md  experiments.md  methodology.md
models/artifacts/: feature_columns.pkl
notebooks/: 01_exploration.ipynb  02_prep_and_eda.ipynb  03_eval.ipynb  04_random-forest-trainning.ipynb  05_cleaning.ipynb
scripts/: build_embeddings.py  data_encoding.py  export_results.py  run_evaluation.py  seed_demo_data.py
src/: __init__.py
src/api/: main.py  routes.py  schemas.py
src/config/: constants.py  settings.py
src/core/: memory_layer.py  persona_builder.py  prompt_engine.py  utils.py
src/data/: feature_engineering.py  json_structure  load_data.py  preprocess.py
src/embeddings/: embedder.py  indexer.py
src/evaluation/: evaluator.py  metrics.py
src/generation/: recommendation_generator.py  review_generator.py  review_tools.py
tests/: experimental-tests.ipynb  test_api.py  test_evaluation_metrics.py  test_parse_agent_json.py  test_persona_builder.py  test_retrieval.py
(+4 files in other folders)
